Add endpoit to list all rooms and enhance logic of adding new entries
